--- a/EmotionFrontend/src/app/tab/tab.component.html
+++ b/EmotionFrontend/src/app/tab/tab.component.html
@@ -1,5 +1,8 @@
 <mat-tab-group>
-    <mat-tab label="Overall Emotions"><app-bar-chart></app-bar-chart></mat-tab>
-    <mat-tab label="Inconducive Emotions" > <app-negative-barchart></app-negative-barchart> </mat-tab>
+  <mat-tab label="Overall Emotions">
+    <app-bar-chart></app-bar-chart>
+  </mat-tab>
+  <mat-tab label="Inconducive Emotions">
+    <app-negative-barchart></app-negative-barchart>
+  </mat-tab>
 </mat-tab-group>
-  
