--- a/EmotionFrontend/src/app/survey/survey.component.css
+++ b/EmotionFrontend/src/app/survey/survey.component.css
@@ -3,55 +3,55 @@
 @tailwind utilities;
 
 .survey-container {
-    display: flex;
-    height:70vh;
-  }
-  
-  .left-section {
-    width: 50%;
-    flex: 1; /* This will make the left section take up the available space */
-  }
-  
-  .right-section {
-    margin-top: 50px;
-    width: 20%; /* You can adjust the width as needed for the right section */
-    display: absolute;
-    flex-direction: column;
-    height: 80vh;
-    overflow-y: auto; 
-  }
+  display: flex;
+  height: 70vh;
+}
 
-  .button {
-    appearance: none;
-    background-color: #0e1111;
-    border: 2px solid #1A1A1A;
-    border-radius: 15px;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    font-size: 15px;
-    font-weight: 600;
-    line-height: normal;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
-  }
-  .button:disabled {
-    pointer-events: none;
-  }
-  
-  .button:hover {
-    box-shadow: rgba(0, 0, 0, 0.4) 0 8px 15px;
-    transform: translateY(-2px);
-  }
-  
-  .button:active {
-    box-shadow: none;
-    transform: translateY(0);
-  }
+.left-section {
+  width: 50%;
+}
+
+.right-section {
+  margin-top: 50px;
+  width: 20%;
+  display: absolute;
+  flex-direction: column;
+  height: 80vh;
+  overflow-y: auto;
+}
+
+.button {
+  appearance: none;
+  background-color: #0e1111;
+  border: 2px solid #1a1a1a;
+  border-radius: 15px;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 15px;
+  font-weight: 600;
+  line-height: normal;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+.button:disabled {
+  pointer-events: none;
+}
+
+.button:hover {
+  box-shadow: rgba(0, 0, 0, 0.4) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
