add close button for survey note

--- a/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
+++ b/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div *ngIf="isVisible">
+<div class="container" >
 	<section style="justify-content: center; align-content:center;">
 		<h3 >{{title}}</h3>
 	</section>
@@ -76,4 +77,5 @@
 
 	
   </div>
+</div>
 </div>
