update close button style

--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="right-section justify-center flex-1 ">
-      <div>
+      <div class = "flex justify-end">
           <button
           (click)="closeSurveyNote()"
           type="button"
