Made tabs look more like buttons

--- a/EmotionFrontend/src/app/tab/tab.component.css
+++ b/EmotionFrontend/src/app/tab/tab.component.css
@@ -1,14 +1,23 @@
 .mat-tab-group {
   margin-bottom: 70px;
-  background-color: red;
-  ::ng-deep.mat-tab-label,
-  ::ng-deep.mat-tab-label-active {
-    min-width: 0 !important;
-    padding: 3px !important;
-    margin: 3px !important;
-  }
 }
 
-.mat-tab-label:hover {
-  color: #ff4081; /* Change this to your desired hover color */
+:host
+  ::ng-deep
+  .mat-mdc-tab-group.mat-mdc-tab-group-stretch-tabs
+  > .mat-mdc-tab-header
+  .mat-mdc-tab {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+}
+
+:host
+  ::ng-deep
+  .mat-mdc-tab-group.mat-mdc-tab-group-stretch-tabs
+  > .mat-mdc-tab-header
+  .mat-mdc-tab.mat-mdc-tab-label-active {
+  background-color: #ff4081; /* Your desired background color for active state */
+  color: #ffffff; /* Text color for active state, adjust as needed */
 }
