--- a/EmotionFrontend/src/app/tab/tab.component.html
+++ b/EmotionFrontend/src/app/tab/tab.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group>
+<mat-tab-group class="pt-1">
   <mat-tab label="Overall Emotions">
     <app-bar-chart></app-bar-chart>
   </mat-tab>
