--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -8,7 +8,7 @@
 
     <div class="right-section justify-center flex-1 ">
       <div class = "flex justify-end">
-          <button
+          <button *ngIf="isVisible"
           (click)="closeSurveyNote()"
           type="button"
           class="button inline-flex items-center px-3 py-3 mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black close-button"
