--- a/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.css
+++ b/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.css
@@ -15,6 +15,45 @@
   padding: 20px;
 }
 
+.header-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem; /* Adds space between the dropdown and the button */
+  margin-left: auto; /* Pushes the controls to the right end */
+}
+
+.controls .button {
+  margin-bottom: 5px; /* Add space below the button */
+}
+
+.custom-button {
+  background-color: black; /* Blue background color */
+  color: white; /* White text */
+  font-weight: bold; /* Bold text */
+  padding: 0.5rem 1rem; /* Padding (8px top/bottom, 16px left/right) */
+  border-radius: 15px; /* Rounded corners */
+  border: none; /* Remove default border */
+  cursor: pointer; /* Pointer cursor on hover */
+  transition: background-color 0.3s; /* Smooth background color transition */
+}
+
+.custom-button:hover {
+  background-color: grey; /* Darker blue on hover */
+}
+
+.custom-button:focus {
+  outline: none; /* Remove default focus outline */
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5), 0 0 0 4px rgba(59, 130, 246, 0.3); /* Custom focus outline */
+}
+
 .survey-section {
   background-color: #f8f9fa; /* Light gray background color */
   border: 1px solid #dee2e6; /* Border color */
