fixed frontend ui

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -1,22 +1,26 @@
 <app-header></app-header>
 
-<div style="display: flex; margin-top: 10px; margin-left: 2%">
+<div style="display: flex; margin-top: 10px; margin-left: 2%; width: 100%">
+  
+  <app-select-time-dropdown
+    style="margin-left: 2%; size: 60rem"
+  ></app-select-time-dropdown>
+  <app-select-view-dropdown
+    style="margin-left: 2%; size: 60rem"
+  ></app-select-view-dropdown>
   <app-user-guide-button
-    style="margin-left: 0.2%; margin-top: 0.2%"
-  ></app-user-guide-button>
-  <app-select-time-dropdown style="margin-left: 2%"></app-select-time-dropdown>
-  <app-select-view-dropdown style="margin-left: 2%"></app-select-view-dropdown>
+    style="margin-right: 0.2%; margin-top: 0.2%; size: 60rem"
+  />
 </div>
 <div style="display: flex; justify-content: space-between">
-  <div class="left-section" style="flex: 1">
+  <div class="left-section" style="flex: 1;">
     <app-radar-chart></app-radar-chart>
   </div>
-  <div class="right-section flex">
-    <!-- <app-radar-chart-writing></app-radar-chart-writing> -->
+  <div class="right-section flex m-2">
     <app-emotion-rating style="flex: 1; overflow: auto"></app-emotion-rating>
   </div>
 </div>
-<div class="flex pt-4" style="width: 60%; padding-left: 4rem">
+<div class="flex pt-4" style="width: 60rem; padding-left: 4vh">
   <button
     (click)="exportToCsv()"
     type="button"
