--- a/EmotionFrontend/src/app/dashboard/dashboard.component.css
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.css
@@ -1,13 +1,3 @@
-/* .dashboard-container {
-  display: flex;
-  justify-content: space-between;
-} */
-
-.radar-chart-container {
-  /* flex: 1; */
-  /* margin-right: 10px; Optional: Adjust margin between charts */
-}
-
 .right-section {
   margin-top: 50px;
   margin-right: 100px;
@@ -16,38 +6,49 @@
   height: 60vh;
 }
 
-.button {
-  appearance: none;
-  background-color: #0e1111;
-  border: 2px solid #1a1a1a;
-  border-radius: 15px;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 15px;
-  font-weight: 600;
-  line-height: normal;
-  outline: none;
-  text-align: center;
-  text-decoration: none;
-  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  will-change: transform;
-}
+
 .button:disabled {
   pointer-events: none;
-}
-
-.button:hover {
-  box-shadow: rgba(0, 0, 0, 0.4) 0 8px 15px;
-  transform: translateY(-2px);
 }
 
 .button:active {
   box-shadow: none;
   transform: translateY(0);
 }
+
+.button {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #3B3B3B;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0 5px 10px 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 12px 40px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+
+.button:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+
