--- a/EmotionFrontend/src/app/header/header.component.css
+++ b/EmotionFrontend/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 .header-container {
   width: 100%;
-  height: 80px;
+  height: 5rem;
   background: rgb(238, 174, 202);
   background: radial-gradient(
     circle,
@@ -12,21 +12,23 @@
 }
 
 .header-container .logo {
-  font-size: 32px;
+  font-size: 2rem;
   color: azure;
   font-weight: bold;
   font-family: "Times New Roman", cursive;
   margin-left: 40px;
   cursor: pointer;
+  width: 15rem;
 }
 
 .header-container .survey {
-  font-size: 32px;
+  font-size: 2rem;
   color: azure;
   font-weight: bold;
   font-family: "Times New Roman", cursive;
-  margin-left: 70px;
+  margin-left: 50px;
   cursor: pointer;
+  width: 15rem
 }
 
 .header-container .logo.active {
@@ -42,5 +44,5 @@
 }
 
 .reflect-button{
-  margin-right: 20px;
+  margin-right: 1rem;
 }
