--- a/EmotionFrontend/src/app/reflect-button/reflect-button.component.css
+++ b/EmotionFrontend/src/app/reflect-button/reflect-button.component.css
@@ -1,52 +1,51 @@
 .button-50 {
-    appearance: button;
-    background-color: transparent;
-    background-image: none;
-    border: 2px solid #000;
-    border-radius: 15px;
-    /* box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px; */
-    box-sizing: border-box;
-    color: black;
-    cursor: pointer;
-    display: inline-block;
-    font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-    font-size: 15px;
-    font-weight: 600;
-    line-height: 20px;
-    margin: 0 5px 10px 0;
-    overflow: visible;
-    padding: 12px 20px;
-    text-align: center;
-    text-transform: none;
-    touch-action: manipulation;
-    user-select: none;
-    -webkit-user-select: none;
-    vertical-align: middle;
-    white-space: nowrap;
-  }
-  
-  .button-50:focus {
-    text-decoration: none;
-  }
-  
-  .button-50:hover {
-    text-decoration: none;
-    background-color: black;
-    color: #fff; /* Dark grey color */
-  }
-  
-  .button-50:active {
-    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
-    outline: 0;
-  }
-  
-  /* .button-50:not([disabled]):active {
+  appearance: button;
+  background-color: transparent;
+  background-image: none;
+  border: 2px solid #000;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: black;
+  cursor: pointer;
+  display: inline-block;
+  font-family: ITCAvantGardeStd-Bk, Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 20px;
+  text-align: center;
+  text-transform: none;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.button-50:focus {
+  text-decoration: none;
+}
+
+.button-50:hover {
+  text-decoration: none;
+  background-color: black;
+  color: #fff; /* Dark grey color */
+}
+
+.button-50:active {
+  box-shadow: rgba(0, 0, 0, 0.125) 0 3px 5px inset;
+  outline: 0;
+}
+
+/* .button-50:not([disabled]):active {
     box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
     transform: translate(2px, 2px);
   } */
-  
-  @media (min-width: 768px) {
-    .button-50 {
-      padding: 12px 50px;
-    }
+
+@media (min-width: 700px) {
+  .button-50 {
+    padding: 12px 2.5rem;
   }
+}
