--- a/EmotionFrontend/src/app/user-guide-button/user-guide-button.component.css
+++ b/EmotionFrontend/src/app/user-guide-button/user-guide-button.component.css
@@ -9,11 +9,11 @@
   cursor: pointer;
   display: inline-block;
   font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
   line-height: normal;
   margin: 0 5px 10px 0;
-  min-height: 60px;
+  /* min-height: 60px; */
   min-width: 0;
   outline: none;
   padding: 12px 40px;
