made changes to ui again

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
 
-<div style="display: flex; margin-top: 10px; margin-left: 2%; width: 100%">
-  
+<div style="display: flex; margin-top: 10px; margin-left: 2%; width: 90%">
   <app-select-time-dropdown
     style="margin-left: 2%; size: 60rem"
   ></app-select-time-dropdown>
@@ -13,7 +12,7 @@
   />
 </div>
 <div style="display: flex; justify-content: space-between">
-  <div class="left-section" style="flex: 1;">
+  <div class="left-section" style="flex: 1">
     <app-radar-chart></app-radar-chart>
   </div>
   <div class="right-section flex m-2">
