--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="feelingsForm" (ngSubmit)="onSubmit()">
   <h1>Emotion Survey</h1>
   <div>
-    <h2>I am feeling...</h2>
+    <h2>I feel...</h2>
     <h3 style="font-weight: 100">
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       Very Weak &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Weak
@@ -25,7 +25,7 @@
   </div>
 
   <div>
-    <h2 for="Inconducive">Which emotions you reported above negatively influenced your Knowledge Building?</h2>
+    <h2 for="Inconducive">Which emotion(s) above negatively influence your Knowledge Building?</h2>
     <div>
       <div *ngFor="let option of options">
         <input
@@ -41,7 +41,7 @@
   </div>
   
   <div>
-    <h2 for="Reason">What caused that emotion? [Optional]</h2>
+    <h2 for="Reason">Why do you feel these emotion(s)? [Optional]</h2>
     <textarea
       formControlName="Reason"
       id="Reason"
