update the download button and survey note

--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -37,14 +37,14 @@
       type="button"
       class="button inline-flex items-center px-3 py-3 mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
     >
-      Download EmoReadWrite
+      Download Note Emotion
     </button>
     <button
       (click)="exportSurveyToCsv()"
       type="button"
       class="button inline-flex items-center px-3 py-3 mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
     >
-      Download EmoSurvey
+      Download Survey Emotion
     </button>
   </div>
 </div>
