--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
     type="button"
     class="button inline-flex px-3 py-3 items-center mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
   >
-    Download EmoReadWrite
+    Download Note Emotion
   </button>
   <button
     (click)="exportSurveyToCsv()"
@@ -30,7 +30,7 @@
     class="button inline-flex px-3 py-3 items-center mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
     style="margin-left: 4rem"
   >
-    Download EmoSurvey
+    Download Survey Emotion
   </button>
 </div>
 
