the radar chart now follows the average

--- a/EmotionFrontend/src/app/radar-chart-jerrisonapi/radar-chart-jerrisonapi.component.html
+++ b/EmotionFrontend/src/app/radar-chart-jerrisonapi/radar-chart-jerrisonapi.component.html
@@ -1,1 +1,14 @@
-<p>radar-chart-jerrisonapi works!</p>
+<div style="display: block">
+  <!-- Radar Chart Container -->
+  <div class="radarchart-container">
+    <!-- Chart Component -->
+    <canvas
+      baseChart
+      [data]="radarChartData"
+      [options]="radarChartOptions"
+      [type]="radarChartType"
+      (chartClick)="handleChartClick($event)"
+    >
+    </canvas>
+  </div>
+</div>
