update note-rating with jerrison api

--- a/EmotionFrontend/src/app/tryingnote/tryingnote.component.html
+++ b/EmotionFrontend/src/app/tryingnote/tryingnote.component.html
@@ -13,7 +13,7 @@
     <app-radar-chart-jerrisonapi></app-radar-chart-jerrisonapi>
   </div>
   <div class="right-section flex">
-    <app-emotion-rating style="flex: 1; overflow: auto"></app-emotion-rating>
+    <app-test-noterating style="flex: 1; overflow: auto"></app-test-noterating>
   </div>
 </div>
 <div class="flex pt-4" style="width: 60%; padding-left: 4rem">
