--- a/EmotionFrontend/src/app/radar-chart-jerrisonapi/radar-chart-jerrisonapi.component.css
+++ b/EmotionFrontend/src/app/radar-chart-jerrisonapi/radar-chart-jerrisonapi.component.css
@@ -1,13 +1,39 @@
 p {
-    font-family: Lato;
+  font-family: Lato;
 }
 
 .radarchart-container {
-    padding-left: 50px;
-    overflow: hidden;
-    display: block;
-    width: 80%;
-    margin-top: 20px;
-    cursor: pointer;
+  padding-left: 50px;
+  overflow: hidden;
+  display: block;
+  width: 80%;
+  margin-top: 20px;
+  cursor: pointer;
 }
 
+.preloader {
+  padding-top: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.spinner {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
