--- a/EmotionFrontend/src/app/test-noterating/test-noterating.component.css
+++ b/EmotionFrontend/src/app/test-noterating/test-noterating.component.css
@@ -1,4 +1,4 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
+@import "bootstrap/dist/css/bootstrap.min.css";
 
 .scrollspy-example {
   position: relative;
@@ -7,7 +7,7 @@
 }
 
 .nav-link.active {
-  background-color: #0D6EFD; /* Set your desired background color for the active nav-link */
+  background-color: #0d6efd; /* Set your desired background color for the active nav-link */
   /* Set your desired text color for the active nav-link */
 }
 
@@ -51,7 +51,8 @@
 
 .custom-button:focus {
   outline: none; /* Remove default focus outline */
-  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5), 0 0 0 4px rgba(59, 130, 246, 0.3); /* Custom focus outline */
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5),
+    0 0 0 4px rgba(59, 130, 246, 0.3); /* Custom focus outline */
 }
 
 .survey-section {
@@ -72,7 +73,7 @@
   margin-bottom: 8px; /* Spacing below the question */
 }
 
-.answer { 
+.answer {
   font-size: 16px; /* Adjust font size */
 }
 
@@ -83,7 +84,7 @@
 }
 
 .sidebar {
-  background-color: #ffffe2; 
+  background-color: #ffffe2;
   color: black;
   padding: 10px; /* Padding inside the sidebar items */
   border-radius: 8px; /* Rounded corners */
@@ -97,4 +98,30 @@
 
 .sidebar .nav-link.active {
   background-color: #0056b3; /* Darker blue background color for active link */
+}
+
+.preloader {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.spinner {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
