Able to name the reflection title now

--- a/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
+++ b/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-select-member-dropdown (userSelected)="onUserSelected($event)"></app-select-member-dropdown>
+<app-reflection-title (titleSelected)="handleTitleSelected($event)"></app-reflection-title>
 
 <div class="form-container">
   <div class="left-section">
