remove barchart click

--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
@@ -10,11 +10,12 @@
       [plugins]="barChartPlugins"
       [legend]="barChartLegend"
       [type]="barChartType"
-      (chartClick)="handleChartClick($event)"
+      
     >
     </canvas>
   </div>
   <!-- </div> -->
 </div>
+<!-- (chartClick)="handleChartClick($event)" -->
 <!--          [datasets]= "barChartData"-->
 <!--[data]="barChartData"-->
