reflection history title

--- a/EmotionFrontend/src/app/reflect-history/reflect-history.component.html
+++ b/EmotionFrontend/src/app/reflect-history/reflect-history.component.html
@@ -16,7 +16,8 @@
             [id]="'example-' + i"
             class="survey-section"
           >
-            <h3>Reflection {{ i + 1 }}</h3>
+            <h3 *ngIf="!emoReg.ReflectionTitle">Reflection {{ i + 1 }}</h3>
+            <h3 *ngIf="emoReg.ReflectionTitle">{{ emoReg.ReflectionTitle }}</h3>
             <p>{{ emoReg.Timestamp }}</p>
             <div class="question-answer">
               <p class="question">Group Members:</p>
