update reflection form - make group member field optional

--- a/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
+++ b/EmotionFrontend/src/app/reflect-form/reflect-form.component.html
@@ -8,12 +8,11 @@
     <div class="question-block blue-bg">
       <h2 class="question-block-heading">Our analysis</h2>
       <label>What do you see in the visualizations?</label>
-      <textarea name="q1" rows="5" maxlength="1000"  [(ngModel)]="formData.Visualization" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
+      <textarea name="q1" rows="5" maxlength="1000" [(ngModel)]="formData.Visualization"></textarea>
 
       <label>Based on the analysis results, what emotional challenges do we have
-        during the Knowledge Building?</label
-      >
-      <textarea name="q2" rows="5" maxlength="1000"  [(ngModel)]="formData.Challenges" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
+        during the Knowledge Building?</label>
+      <textarea name="q2" rows="5" maxlength="1000" [(ngModel)]="formData.Challenges"></textarea>
     </div>
   </div>
 
@@ -22,12 +21,11 @@
     <div class="question-block blue-bg">
       <h2 class="question-block-heading">Our reflection</h2>
       <label>Which aspects do you think we can do better?</label>
-      <textarea name="q3" rows="5" maxlength="1000"  [(ngModel)]="formData.ImprovementWays" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
+      <textarea name="q3" rows="5" maxlength="1000" [(ngModel)]="formData.ImprovementWays"></textarea>
 
       <label>How can we create a more positive emotional environment to support our
-        Knowledge Building?</label
-      >
-      <textarea name="q4" rows="5" maxlength="1000"  [(ngModel)]="formData.PositivePlan" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
+        Knowledge Building?</label>
+      <textarea name="q4" rows="5" maxlength="1000" [(ngModel)]="formData.PositivePlan"></textarea>
     </div>
   </div>
 
@@ -36,13 +34,17 @@
     <div class="question-block blue-bg">
       <h2 class="question-block-heading">Our regulation</h2>
       <label>What is our specific action plan for creating a supportive emotional
-        environment?</label
-      >
-      <textarea name="q5" rows="8" maxlength="1000" [(ngModel)]="formData.Action" (ngModelChange)="checkIfAllQuestionsAnswered()"></textarea>
+        environment?</label>
+      <textarea name="q5" rows="8" maxlength="1000" [(ngModel)]="formData.Action"></textarea>
     </div>
   </div>
 </div>
 
-<div class="submit-block" [ngClass]="{'disabled-button': !allQuestionsAnswered}">
-  <input type="submit" [value]="'Submit'" (click)="onSubmitClick()" [disabled]="!allQuestionsAnswered" />
+<div class="submit-block" [ngClass]="{'disabled-button': !(selectedTitle?.trim()?.length)}">
+  <input
+    type="button"
+    value="Submit"
+    (click)="onSubmitClick()"
+    [disabled]="!(selectedTitle && selectedTitle.trim().length)"
+  />
 </div>
